--- a/Rode-HTMLAssignment1.html
+++ b/Rode-HTMLAssignment1.html
@@ -1,93 +1,28 @@
 <p></p>
 <h1 style="text-align: center;"><span style="color: #333399;"><strong>Analysis of&nbsp;<a href="https://www.seva.org/site/SPageServer/">'seva.org'</a>&nbsp; website</strong></span></h1>
 <p>Analysis was conducted based on CRAP principles:</p>
-<h2>Contrast</h2>
-<table style="width: 561px;">
-<tbody>
-<tr>
-<td width="115" style="text-align: left; width: 119px; vertical-align: top;">
-<p>Size Contrast: font sizes to indicate information hierarchy</p>
-<p>&nbsp;</p>
-</td>
-<td width="119" style="text-align: left; width: 123px; vertical-align: top;">
-<p>Color Contrast: Dark text on light backgrounds (or vice versa) - Accent colors for links, buttons, and key information - Sufficient contrast ratios for accessibility compliance</p>
-</td>
-<td width="103" style="text-align: left; width: 107px; vertical-align: top;">
-<p>Font Contrast:&nbsp; Bold headings vs. regular body text - Different font families for headings vs. body</p>
-</td>
-<td width="115" style="text-align: left; width: 119px; vertical-align: top;">
-<p>Spatial Contrast:&nbsp; Dense information areas vs. white space - Varied spacing between elements -</p>
-</td>
-<td width="89" style="text-align: left; width: 93px; vertical-align: top;">
-<p>Different content block sizes</p>
-</td>
-</tr>
-</tbody>
-</table>
-<img src="https://github.com/ShwetaR2025/481-july-2025/blob/main/color-contrast.png" alt="" />
-<h2>Repetition&nbsp;</h2>
-<table>
-<tbody>
-<tr>
-<td width="115" style="text-align: left; vertical-align: top;">
-<p>Typography Patterns:&nbsp; Consistent heading hierarchy (H1, H2, H3 styling) - Regular font choices<br /> for body text - Standardized treatment of links and emphasis<br /><br /></p>
-<p>&nbsp;</p>
-</td>
-<td width="119" style="text-align: left; vertical-align: top;">
-<p>Color Schemes: Consistent color palette throughout the site&nbsp;<br /> </p>
-</td>
-<td width="103" style="text-align: left; vertical-align: top;">
-<p>Repeated accent colors for similar<br /> functions - Standardized background and text color combinations</p>
-</td>
-<td width="115" style="text-align: left; vertical-align: top;">
-<p>Spacing and Layout:&nbsp; Consistent margins and padding - Standardized spacing between elements<br /> - Repeated layout patterns for similar content types<br /> </p>
-</td>
-<td width="89" style="text-align: left; vertical-align: top;">
-<p>Visual Elements: Consistent bullet point styles - Standardized image treatments and captions -<br /> Repeated icon or graphic styles</p>
-</td>
-</tr>
-</tbody>
-</table>
+<h2>Contrast and Repetition&nbsp;</h2>
+<p><img src="https://github.com/ShwetaR2025/481-july-2025/blob/main/color-contrast.png" alt="" />The font size of 'seva.org' is unlike other website that I have been on. The organization's name and logo are small compared to other websites such as Unesco or World health organization.</p>
+<p>Although I do think the logo design does capture viewer attention.</p>
+<p>The contrast of orange for certain tabs like donate, give today and subscribe establish a pattern for the viewer that these are tabs for those who want to engage with the organization.&nbsp;</p>
+<p>The background of white against which the image in a colored rectangle is layed out.</p>
+<p>As we navigate the website the 'Heading 2' use "deep pink" color against a white background.&nbsp; When colored background is used then white colored font is used against colored background .&nbsp;</p>
+<p>As we navigate the website the&nbsp;Visual Elements have the same treatment&nbsp; and caption style. The brand / website logo and tag line is present on the top of the page left hand corner&nbsp; and the tabs labelled "gift of sight" and "donate" making them constant&nbsp;icon and reminder of the purpose of the website.</p>
+<p>Repetition of the colors and font size for headings and content provided enables the viewer to scan through the website effectively. The Seva website does this very well.</p>
 <h2>Alignment&nbsp;</h2>
-<table>
-<tbody>
-<tr>
-<td width="115" style="text-align: left; vertical-align: top;">
-<p>Left Edge Alignment: aligned text for easy reading (most common for body content)</p>
-</td>
-<td width="119" style="text-align: left; vertical-align: top;">
-<p>Right Edge<br /> aligned elements for visual balance</p>
-<p>OR</p>
-<p>- Center-aligned text for titles and special emphasis<br /> </p>
-</td>
-<td width="103" style="text-align: left; vertical-align: top;">
-<p>Visual Alignment:&nbsp; Aligning images with text baselines - Consistent positioning of headings<br /> relative to content - Aligned columns in multi-column layouts<br /> </p>
-</td>
-<td width="115" style="text-align: left; vertical-align: top;">
-<p>Conceptual Alignment:&nbsp; Related information grouped and aligned together -</p>
-</td>
-<td width="89" style="text-align: left; vertical-align: top;">
-<p>Hierarchical<br /> information aligned to show relationships - Sequential information aligned to show progression</p>
-</td>
-</tr>
-</tbody>
-</table>
+<p><span style="font-size: 14px;">As a viewer scrlling down to the contents on the main page of the website, alignment of content was interesting to observe.</span></p>
+<p><span style="font-size: 14px;">The first image on the website is in a rectangular box that works as a frame for the text and image. The text is 'left edge aligned' and image is 'right edge aligned' in the rectangle. Though, the rectangle is centered on the page.</span><span style="font-size: 14px;"></span></p>
+<p><span style="font-size: 14px;">The end of the first page, the text is left aligned and the image is to the right without a rectangle frame or colored background.</span></p>
+<p><span style="font-size: 14px;">Subsequent visuals are center-aligned with the heading above the image are also centered.</span></p>
+<p><span style="font-size: 14px;">Visual Alignment in the webpage seems to have been paid attention to such as :</span></p>
+<ul>
+<li><span style="font-size: 14px;"> Aligning images with text baselines&nbsp;</span></li>
+<li><span style="font-size: 14px;"> Consistent positioning of headings<br /><br /></span></li>
+</ul>
 <h2>Proximity</h2>
-<table>
-<tbody>
-<tr>
-<td width="115" style="text-align: left; vertical-align: top;">
-<p>Visual Grouping:&nbsp; Related text elements positioned close together - Headings placed near their<br /> corresponding content - Supporting information clustered with main points<br /> </p>
-<p>&nbsp;</p>
-</td>
-<td width="119" style="text-align: left; vertical-align: top;">
-<p>Spatial Separation:&nbsp; White space used to separate different topics - Clear breaks between content<br /> sections - Distinct spacing for different types of information</p>
-</td>
-<td width="103" style="text-align: left; vertical-align: top;">
-<p>Functional Grouping:&nbsp; Navigation elements grouped together - Related links clustered in specific<br /> areas - Contact information or metadata grouped consistently</p>
-<p>&nbsp;</p>
-</td>
-</tr>
-</tbody>
-</table>
+<p>Visual Grouping is evident as Headings sre placed near their<br />corresponding content meadning that the headings are relevant to the supporting information.&nbsp;</p>
+<p>White space or very pale color (similar to white) space are used to separate different topics. This enables a viewer the ability to visually know that content topic is changing. White spaces and use of color space have been used appropriately to mark clear breaks between content&nbsp;sections and indication of topic change. different types of information</p>
+<p>In the "ways to give" tab distinct spacing for different types of information has been used. Same thing with the "get involved tab.&nbsp;</p>
+<p>Functional Grouping in the "get involved tab" permits viewer the ability to navigate the different ways to support Seva.org. On thsi page, the navigation elements grouped together.</p>
+<p>The contact information or metadata grouped consistently on each page.&nbsp;</p>
 <p></p>
