--- a/Rode-HTMLAssignment1.html
+++ b/Rode-HTMLAssignment1.html
@@ -9,6 +9,7 @@
 <p>As we navigate the website the 'Heading 2' use "deep pink" color against a white background.&nbsp; When colored background is used then white colored font is used against colored background .&nbsp;</p>
 <p>As we navigate the website the&nbsp;Visual Elements have the same treatment&nbsp; and caption style. The brand / website logo and tag line is present on the top of the page left hand corner&nbsp; and the tabs labelled "gift of sight" and "donate" making them constant&nbsp;icon and reminder of the purpose of the website.</p>
 <p>Repetition of the colors and font size for headings and content provided enables the viewer to scan through the website effectively. The Seva website does this very well.</p>
+<p><img src="color-contrast.png" alt="Color contrast" /></p>
 <h2>Alignment&nbsp;</h2>
 <p><span style="font-size: 14px;">As a viewer scrlling down to the contents on the main page of the website, alignment of content was interesting to observe.</span></p>
 <p><span style="font-size: 14px;">The first image on the website is in a rectangular box that works as a frame for the text and image. The text is 'left edge aligned' and image is 'right edge aligned' in the rectangle. Though, the rectangle is centered on the page.</span><span style="font-size: 14px;"></span></p>
@@ -19,10 +20,14 @@
 <li><span style="font-size: 14px;"> Aligning images with text baselines&nbsp;</span></li>
 <li><span style="font-size: 14px;"> Consistent positioning of headings<br /><br /></span></li>
 </ul>
+<p><img src="Alignment.png" alt="Color contrast" /></p>
+<p><img src="video.png" alt="Color contrast" /></p>
 <h2>Proximity</h2>
 <p>Visual Grouping is evident as Headings sre placed near their<br />corresponding content meadning that the headings are relevant to the supporting information.&nbsp;</p>
 <p>White space or very pale color (similar to white) space are used to separate different topics. This enables a viewer the ability to visually know that content topic is changing. White spaces and use of color space have been used appropriately to mark clear breaks between content&nbsp;sections and indication of topic change. different types of information</p>
 <p>In the "ways to give" tab distinct spacing for different types of information has been used. Same thing with the "get involved tab.&nbsp;</p>
 <p>Functional Grouping in the "get involved tab" permits viewer the ability to navigate the different ways to support Seva.org. On thsi page, the navigation elements grouped together.</p>
 <p>The contact information or metadata grouped consistently on each page.&nbsp;</p>
-<p></p>
+<p><img src="Proximity.png" alt="Color contrast" /></p>
+<p><img src="Proximity2.png" alt="Color contrast" /></p>
+<p><img src="proximity3-Alignment2.png" alt="Color contrast" /></p>
